--- a/html/src/main/webapp/index.html
+++ b/html/src/main/webapp/index.html
@@ -52,6 +52,9 @@
         <li>
             <a href="table.html">Table</a>
         </li>
+        <li>
+            <a href="form.html">Form</a>
+        </li>
 
     </ul>
 
